--- a/api/composer.json
+++ b/api/composer.json
@@ -3,6 +3,7 @@
     "description": "php-api",
     "type": "project",
     "require": {
-        "fightbulc/moment": "^1.32"
+        "fightbulc/moment": "^1.32",
+        "mashape/unirest-php": "^3.0"
     }
 }
