fix md5, change env variable to conn.php

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ bower_components/
 app/node_modules/
 app/dist/
 app/bower_components/
+# API
+api/config/conn.php
 # Compiled Java class files
 *.class
 
