--- a/app/bower.json
+++ b/app/bower.json
@@ -53,7 +53,8 @@
     "angular-base64": "^2.0.5",
     "components-font-awesome": "^5.4.2",
     "ckeditor": "^4.11.1",
-    "angular-wizard": "^1.1.1"
+    "angular-wizard": "^1.1.1",
+    "angular-ui-calendar": "^1.0.2"
   },
   "resolutions": {
     "angular": "=1.4.8",
