--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 # Node artifact files
+app/grunt
 node_modules/
 app/bower_components/
 app/node_modules/
