--- a/app/bower.json
+++ b/app/bower.json
@@ -54,7 +54,8 @@
     "components-font-awesome": "^5.4.2",
     "ckeditor": "^4.11.1",
     "angular-wizard": "^1.1.1",
-    "angular-ui-calendar": "^1.0.2"
+    "angular-ui-calendar": "^1.0.2",
+    "angular-toastr": "^2.1.1"
   },
   "resolutions": {
     "angular": "=1.4.8",
