--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "angular-base64-upload": "^0.1.23",
     "angular-bootstrap-datetimepicker": "^1.1.4",
     "angular-paging": "^2.2.2",
+    "angular-toastr": "^2.1.1",
     "angular-ui-router": "^0.3.1",
     "bower": "^1.8.0",
     "fullcalendar": "^5.8.0",
