--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "Pernod Ricard - CRM - angular app",
   "main": "grunt",
   "scripts": {
+    "dev" : "grunt dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
   },
