--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,9 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3306:3306"
+    volumes:
+      - ./db_init_scripts:/docker-entrypoint-initdb.d
+      - mysql_data:/var/lib/mysql
     expose:
       - 3306
 
@@ -79,3 +82,7 @@ services:
   cache:
     container_name: cache
     image: memcached:1.6-alpine
+
+volumes:
+  mysql_data:
+    name: lextracking_db
