--- a/application/app/package.json
+++ b/application/app/package.json
@@ -20,7 +20,7 @@
     "grunt": "^1.2.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-connect": "2.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-uglify": "^1.0.1",
