--- a/application/nginx/nginx.conf
+++ b/application/nginx/nginx.conf
@@ -1,18 +1,76 @@
+# server {
+#   listen 82;
+#   root /var/www/html/app/public;
+#   index index.php index.htm index.html;
+
+#   location / {
+#       try_files $uri $uri/ /index.php?$query_string;
+#   }
+
+#   location /index.php {
+#       include fastcgi_params;
+#       fastcgi_connect_timeout 10s;
+#       fastcgi_read_timeout 10s;
+#       fastcgi_buffers 256 4k;
+#       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#       fastcgi_pass php:9000;
+#   }
+# }
+
+upstream api {
+  # Could be host.docker.internal - Docker for Mac/Windows - the host itself
+  # Could be your API in a appropriate domain
+  # Could be other container in the same network, like container_name:port
+  server php:9000;
+}
+
 server {
   listen 82;
-  root /var/www/html/app/public;
-  index index.php index.htm index.html;
-
+  server_name localhost;
+  
   location / {
-      try_files $uri $uri/ /index.php?$query_string;
-  }
+    #if ($request_method = 'OPTIONS') {
+    #  add_header 'Access-Control-Allow-Origin' '*';
+    #  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+      #
+      # Custom headers and headers various browsers *should* be OK with but aren't
+      #
+    #  add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+      #
+      # Tell client that this pre-flight info is valid for 20 days
+      #
+    #  add_header 'Access-Control-Max-Age' 1728000;
+    #  add_header 'Content-Type' 'text/plain; charset=utf-8';
+    #  add_header 'Content-Length' 0;
+    #  return 204;
+    #}
+    #if ($request_method = 'POST') {
+    #  add_header 'Access-Control-Allow-Origin' '*' always;
+    #  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    #  add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+    #  add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    #}
+    #if ($request_method = 'GET') {
+    #  add_header 'Access-Control-Allow-Origin' '*' always;
+    #  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    #  add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+    #  add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    #}
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+    add_header 'Access-Control-Allow-Credentials' 'true';
 
-  location /index.php {
-      include fastcgi_params;
-      fastcgi_connect_timeout 10s;
-      fastcgi_read_timeout 10s;
-      fastcgi_buffers 256 4k;
-      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-      fastcgi_pass php:9000;
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain; charset=utf-8';
+        add_header 'Content-Length' 0;
+        return 204;
+    }
+    proxy_pass http://api/;
   }
 }
